# ger_drone_cbr

./: CMakeLists.txt  exemplo - cmake.txt  package.xml
launch/: dualcamera.launch  fase1.launch  fase1SemDrone.launch  semRota.launch  testaBase.launch  testaQR.launch  testeInterface.launch
msg/: Position.msg
scripts/: beep.py  interface.py  interface2.py  ip_camera.py
src/: controle.cpp  controle.h  controleARDrone.cpp  controleARDrone.h  estrategia.cpp  estrategia.h  estrategia_main.cpp  funcoesPosition.cpp  funcoesPosition.h  interface.cpp  rota.cpp
vrep/: b0RemoteApi.cpp  b0RemoteApi.h
